--- a/.github/workflows/Gemini4.yml
+++ b/.github/workflows/Gemini4.yml
@@ -20,38 +20,37 @@ jobs:
       - name: Checkout code      
         uses: actions/checkout@v3     
         with:   
-          ref: ${{ github.event.pull_request.head.ref }}   
-          fetch-depth: ${{ env.PR_FETCH_DEPTH }}     
+          fetch-depth: 0  # Ensures full history for pull requests
+
       - name: Set up JDK 
         uses: actions/setup-java@v1 
         with: 
-          java-version: '23.0.2' # You can change this to the version you want 
-      - name: Compile Java 
-        run: | 
-          cd HolidayTravelVehicles 
-          javac -d . *.java  
-        # Compile java file from directory 
-      
-      - name: Run Main Class 
-        run: | 
-          cd HolidayTravelVehicles 
-          java Main
+          java-version: '17'  # Use stable LTS version
+          distribution: 'temurin'
+
+      - name: Build with Gradle
+        run: |
+          cd HolidayTravelVehicles
+          ./gradlew build  # Gradle handles compilation automatically
+
+      - name: Run Tests
+        run: |
+          cd HolidayTravelVehicles
+          ./gradlew test  # Runs tests to ensure the build is working
 
   dependency-submission:
-
     runs-on: ubuntu-latest
     permissions:
       contents: write
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - uses: actions/checkout@v4
+      
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@v4
